# barrel-o-colab-notesbooks

./: .gitignore  LICENSE  README.md  main.py
.devcontainer/: Dockerfile  devcontainer.json  setup_bashit.sh
barrel_o_colab/: __init__.py  main.py  pyproject.toml  setup.py
barrel_o_colab/notebooks/: a1_start_here.ipynb
container_bash_histories/: history0.txt
